k8s/workloads/default/unleash/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unleash
  namespace: default
  labels:
    app.kubernetes.io/name: unleash
    app.kubernetes.io/instance: unleash
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: unleash
      app.kubernetes.io/instance: unleash
  template:
    metadata:
      labels:
        app.kubernetes.io/name: unleash
        app.kubernetes.io/instance: unleash
    spec:
      imagePullSecrets:
        - name: dockerconfigjson-github
      volumes:
        - name: certs
          configMap:
            name: ca.liveview-template.app-bundle
      containers:
        - name: unleash
          image: ghcr.io/cschmatzler/unleash:5.0.6
          imagePullPolicy: Always
          volumeMounts:
            - name: certs
              mountPath: /certs
              readOnly: true
          ports:
            - name: http
              protocol: TCP
              containerPort: 4242
        - name: unleash-init
          image: ghcr.io/cschmatzler/unleash-init:1.0.0
          imagePullPolicy: Always
