k8s/workloads/default/unleash/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unleash
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/target: liveview-template-app.manticore-hippocampus.ts.net
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: private
  rules:
    - host: &host unleash.liveview-template.app
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: unleash
                port:
                  name: http
  tls:
    - secretName: unleash-tls
      hosts:
        - *host
